--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,5 +1,5 @@
 # Stage 1: Build the Vite application (Still Linux-based)
-FROM node:20.11.1-alpine3.20 AS build
+FROM node:20-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
